# tehran-stocks

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Pipfile  README.md  asset-manifest.json  index.html  jsconfig.json  mypy.ini  precache-manifest.14dd2ab6658c71067749cd45f188ac29.js  precache-manifest.26c003da7acac50e9f8770094900cdd4.js  precache-manifest.74e95b44e821de384687a9e62a358197.js  precache-manifest.9337feeeae1024aed7aad9f0c9298eb0.js  precache-manifest.ee41f5f8e65c270fc3507e405ac7136d.js  pyproject.toml  pytest.ini  recompile.sh  service-worker.js  setup.py
Docs/: .flowconfig  i18next-scanner.config.js  package.json
Docs/public/: index.html
Docs/src/: App.js
Docs/src/AppBar/: ChangeLanguage.js  index.js
Docs/src/HomePage/: index.js
Docs/src/Translation/: en.js  index.js
Docs/src/store/: index.js
Docs/src/theme/: index.js  jss.js
Example/: Cufflink_Sample.ipynb  Read_Data.ipynb  Technical Analysis.ipynb
public/: index.html
src/: test.py
src/HomePage/Body/: index.js
src/HomePage/Cards/: Card.js
src/Translation/: fa.js  index.js
src/tehran_stocks/: __init__.py  initializer.py
src/tehran_stocks/config/: engine.py  (+1 more)
static/css/: main.050523cc.chunk.css  main.050523cc.chunk.css.map
static/js/: 2.4af723e6.chunk.js  2.4af723e6.chunk.js.map  2.6287c91b.chunk.js  2.6287c91b.chunk.js.map  2.c7b5ad29.chunk.js  2.c7b5ad29.chunk.js.map  main.2a43e9ac.chunk.js  main.2a43e9ac.chunk.js.map  main.64539dd7.chunk.js  main.64539dd7.chunk.js.map  main.6c21daa6.chunk.js  main.6c21daa6.chunk.js.map  main.9dac2518.chunk.js  main.9dac2518.chunk.js.map  main.c6166a9b.chunk.js  main.c6166a9b.chunk.js.map  runtime-main.6fd4b4e9.js  runtime-main.6fd4b4e9.js.map  runtime-main.aa545fd1.js  runtime-main.aa545fd1.js.map
tehran_stocks/: __init__.py  initializer.py
tehran_stocks/config/: __init__.py  config.default.yml  config_file.py  engine.py
tehran_stocks/data/: __init__.py  groups.py  instrument_types.py  tickers.py
tehran_stocks/download/: __init__.py  base.py  details.py  index.py  market.py  names.py  price.py  stock_name.py
tehran_stocks/gui/: main.py
tehran_stocks/models/: __init__.py  create.py  instrument.py  instrument_price.py  stocks.py
tehran_stocks/schema/: details.py  index.py  market.py  price.py
tests/: test_config.py  test_data.py  test_download.py  test_download_details.py  test_download_index.py  test_download_name.py  test_download_price.py
(+11 files in other folders)
