[tool.poetry]
name = "tehran-stocks"
version = "3.0.0a0"
description = "Data Downloader for Tehran stock market"
authors = ["Mehdi Ghodsizadeh <mehdi.ghodsizadeh@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://ghodsizadeh.github.io/tehran-stocks/"
repository = "https://github.com/ghodsizadeh/tehran-stocks.git"



[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.26.0"
SQLAlchemy = "^1.4.28"
jalali-pandas = "^0.2.0"
lxml = "^4.8.0"
aiohttp = "^3.8.5"
aiodns = "^3.0.0"
PyYAML = "^6.0"
pandas = "^2.0.3"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.16.0"
pylint = "^2.12.2"
pytest = "^7.4.0"
ipython = ">=7.31,<9.0"
ipdb = "^0.13.9"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
